服务详情接口完成
