# controller/service.go
@@ -155,7 +155,7 @@ func (service *ServiceController) ServiceDelete(c *gin.Context) {
 // @ID /service/service_detail
 // @Accept  json
 // @Produce  json
-// @Param id query string true "服务ID"
+// @Param service_id query int true "服务ID"
 // @Success 200 {object} middleware.Response{data=dao.ServiceDetail} "success"
 // @Router /service/service_detail [get]
 func (service *ServiceController) ServiceDetail(c *gin.Context) {
